--- a/client/src/stylesheets/Search.css
+++ b/client/src/stylesheets/Search.css
@@ -53,7 +53,7 @@
   appearance: none;
   padding: 0;
   line-height: inherit;
-  color: inherit;
+  color: black;
   overflow: visible;
   margin: 0px;
   text-rendering: auto;
@@ -75,7 +75,7 @@
   outline-style: initial;
   outline-width: 0px;
 }
-#searchbtn {
+.searchbtn {
   margin-left: 0.25rem;
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -98,7 +98,7 @@
   box-sizing: border-box;
   border: 0 solid #e2e8f0;
 }
-#searchbtn:focus {
+.searchbtn:focus {
   outline-color: initial;
   outline-style: initial;
   outline-width: 0px;
@@ -134,7 +134,8 @@
   margin-top: 2rem;
   margin-bottom: 2rem;
   border-radius: 0.5rem;
-  background-color:black;
+  border: 2px solid #8e9778;
+    background-color: #afb994;
   display: block;
 }
 
@@ -147,7 +148,13 @@
 #card-body {
   padding: 1rem;
 }
-
+.card-title {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  word-break: break-all;
+  font-weight: bold;
+  text-align: center;
+}
 .card-text {
   font-size: 1.125rem;
   line-height: 1.75rem;
