--- a/client/src/stylesheets/App.css
+++ b/client/src/stylesheets/App.css
@@ -13,20 +13,23 @@
         }
         /* Extra large devices (large laptops and desktops, 1200px and up) */
         @media only screen and (min-width: 1200px) {}
+       
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@300&display=swap');
       
 .App {
   text-align: center;
 }
 
 body {
+  box-sizing: border-box;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #fcf3e1;;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  color:black;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.43;
   letter-spacing: 0.01071em;
-  background-color: rgb(174, 145, 130);
+  background-color:black;
  
 }
 
@@ -36,27 +39,30 @@ code {
 }
 
 h1{
-  margin: 20px;
-  padding: 55px;
-  font-weight: 800px;
-
+  padding-top: 3.5rem;
+  font-size:10rem ;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
 }
 
-h1,p {
-  text-align: center;
 
+h2{
+  color:white ;
+  margin-top: 4rem;
+  word-break: break-all;
 }
 .jumbo {
-  background: url("../assets/keyboard.jpg") no-repeat fixed bottom;
+  background: url("../assets/jumbo.jpg") no-repeat fixed bottom;
   background-size: cover;
   color: #efefef;
-  height: 200px;
   position: relative;
   z-index: -2;
   display: flex;
   justify-content: center;
   line-height: 0.75rem;
   padding:10px ;
+  height: 100vh;
+
 }
 .overlay {
   background-color: rgb(253, 253, 253);
@@ -67,4 +73,9 @@ h1,p {
   bottom: 0;
   right: 0;
   z-index: -1; 
+}
+
+.copyright{
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
 }
