--- a/client/src/stylesheets/Search.css
+++ b/client/src/stylesheets/Search.css
@@ -13,27 +13,25 @@
 }
 #searchForm {
   width: 50rem;
-  height: 10rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  height: 15rem;
+  padding-top: 4rem;
   border: 2px solid #8e9778;
 
   background-color: #afb994;
   border-radius: 25px;
-  display: flex;
   align-items: center;
   position: relative;
   margin-top: 0em;
 }
 .form-group {
-  display: block;
-  margin-left: 8rem;
+  margin-left: 2rem;
   margin-block-end: 1em;
+  width: 50%;
 }
 
 
 #searchBar {
-  width: 100%;
+  width: 50%;
   height: 2.5rem;
   padding-left: 0.75rem;
   padding-right: 0.5rem;
@@ -44,8 +42,8 @@
   display: flex;
   align-items: center;
   position: relative;
-  margin-top: 1.5em;
 }
+
 .form-control {
   width: 100%;
   height: 1.5rem;
