--- a/client/src/stylesheets/Footer.css
+++ b/client/src/stylesheets/Footer.css
@@ -1,30 +1,25 @@
 
 .footer-wrapper{
-    padding-top: 3em;
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  display:flex;
- 
-
+padding-top: 3em;
+position: relative;
+bottom: 0;
+width: 100%;
+text-align: center;
 }
 .footer-content{
-align-items: center;
 margin-block-start: 1em;
 margin-block-end: 1em;
-margin-inline-start: 10.8878125rem;
-margin-inline-end: 0rem;
 }
 
 
 .footer-link{
-   color:  rgb(47, 57, 66);
-   text-decoration:none ;
+color:  rgb(47, 57, 66);
+text-decoration:none ;
 padding-left:2rem ;
 }
 
 .footer-link:hover{
-    color:  rgb(0, 0, 0);
-    text-decoration:none ;
+color:  rgb(0, 0, 0);
+text-decoration:none ;
  
  }
